2009-July-15 Chris Morley

	* examples/isopropylHinderedRotor:	Add an example data file and some
	notes on hindered rotors.
	
	* src/XMLPersist.cpp: extra endl to improve log file output.
	
2009-July-15 Chris Morley

	* src/MicroRate.cpp: included XML names in the range variables because
	 they mean more to users.
	 
	* src/Rdouble.h,src/Rdouble.cpp: some new functions. Take account of
	floating point rounding errors. Fixes bug #2818103.

	* src/System.cpp, src/System.h: redo (sorry, I know this is a character
	defect) gridSearch with a simpler, more	transparent recursive function.
	This may have messed up the punch file output. 
	Enable multiple <analysis> sections in XML file
	
	* mesmer1.xsl: can now view multiple <analysis> sections.
	
2009-July-11 Struan Robertson

	* System.cpp: More LineSearch material.

2009-July-11 Struan Robertson

	* System.cpp: Addition of LineSearch method required by automated search.

2009-June-28 Struan Robertson

	* System.cpp: Initial changes toward automated fitting and some minor corrections.

_2009_06_24__12_56_03_ Chi-Hsiu Liang

  * Correct a template function in TMatrix.h

_2009_06_19__08_37_56_ Chi-Hsiu Liang

  * Fixed a compilation bug Josh Allen reported on line 109 of IrreversibleExchangeReaction.h.

_2009_06_15__15_45_40_ Chi-Hsiu Liang

  * Fixed a Cygwin compile problem on NaN and _isnan.

2009-June-15 Chris Morley

	* Windows VC9/distribution/ReadMe.txt: same change of details
	
2009-June-15 Struan Robertson

	* README: Change of details.

_2009_06_12__14_24_18_ Chi-Hsiu Liang

  * Make manual pdf

2009-June-12 Chris Morley

  * Removed change tracking in manual
  * Moved License.txt from VC9 to top level folder
  * README added reference to Licence.txt, corrected my email address
  * MesmerQA/QA.bat Added another conditional statement so that it
    will find Mesmer.exe in the installed version (in the top level folder)
  * Windows VC9/distribution/NSISScriptToCreateInstaller.nsi: mods appropriate